# review_object_detection_metrics

./: Pipfile  pyproject.toml  setup.cfg  setup.py
example/: drawing_bbs.py  evaluate_bbs.py  results.py
object_detection_metrics/: __init__.py  bounding_box.py
object_detection_metrics/evaluators/: pascal_voc_evaluator.py  tube_evaluator.py
object_detection_metrics/utils/: general_utils.py
tests/: test_converter.py  test_package_api.py
